UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Compensation_Period__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Period__c</fullName>
    <description>This is used in the Solution Architect Case owned by Denise McAuliffe</description>
    <label>Compensation Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2019-Q3</fullName>
            </value>
            <value>
                <fullName>2019-Q4</fullName>
            </value>
            <value>
                <fullName>2020-Q1</fullName>
            </value>
            <value>
                <fullName>2020-Q2</fullName>
            </value>
            <value>
                <fullName>2020-Q3</fullName>
            </value>
            <value>
                <fullName>2020-Q4</fullName>
            </value>
            <value>
                <fullName>2021-Q1</fullName>
            </value>
            <value>
                <fullName>2021-Q2</fullName>
            </value>
            <value>
                <fullName>2021-Q3</fullName>
            </value>
            <value>
                <fullName>2021-Q4</fullName>
            </value>
            <value>
                <fullName>2022-Q1</fullName>
            </value>
            <value>
                <fullName>2022-Q2</fullName>
            </value>
            <value>
                <fullName>2022-Q3</fullName>
            </value>
            <value>
                <fullName>2022-Q4</fullName>
            </value>
            <value>
                <fullName>2023-Q1</fullName>
            </value>
            <value>
                <fullName>2023-Q2</fullName>
            </value>
            <value>
                <fullName>2023-Q3</fullName>
            </value>
            <value>
                <fullName>2023-Q4</fullName>
            </value>
            <value>
                <fullName>2024-Q1</fullName>
            </value>
            <value>
                <fullName>2024-Q2</fullName>
            </value>
            <value>
                <fullName>2024-Q3</fullName>
            </value>
            <value>
                <fullName>2024-Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>