UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Competitive_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Analysis__c</fullName>
    <inlineHelpText>Who is the competition and what are Frontier&apos;s advantages or disadvantages?
What is the threat of &apos;no change&apos; being made - customer to decide to remain &apos;as-is&apos;?</inlineHelpText>
    <label>Competitive Analysis</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>