UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Competitor_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s_Name__c</fullName>
    <description>Created for Skip Lineberg for Churn Alert case 11/2020</description>
    <inlineHelpText>If available, enter the competitor&apos;s name.</inlineHelpText>
    <label>Competitor&apos;s Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>