UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <description>Added to track the percentage complete on the case.</description>
    <label>% Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>