UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Complex_Billing_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Complex_Billing_Notification_Date__c</fullName>
    <label>Complex Billing Notification Date</label>
    <type>Date</type>
</CustomField>