UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Complex_Billing_Product__c.field-meta.xml
<CustomField>
    <fullName>Complex_Billing_Product__c</fullName>
    <label>Complex Billing Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billing_Issue_Cause__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Frame</fullName>
            </value>
            <value>
                <fullName>Metro E</fullName>
            </value>
            <value>
                <fullName>OC 48</fullName>
            </value>
            <value>
                <fullName>OS 192 Ring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PRI</fullName>
            </value>
            <value>
                <fullName>TLS</fullName>
            </value>
            <value>
                <fullName>VOIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>