UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Complex_Billing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complex_Billing_Reason__c</fullName>
    <label>Complex Billing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Billing_Issue_Cause__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Billing – Multiple Cycles/Accounts</fullName>
            </value>
            <value>
                <fullName>LD Rerates- Multiple Cycles/Accounts</fullName>
            </value>
            <value>
                <fullName>Tariff Research</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>ETF</fullName>
            </value>
            <value>
                <fullName>Misquoted</fullName>
            </value>
            <value>
                <fullName>Missed Commitment</fullName>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>Order Error</fullName>
            </value>
            <value>
                <fullName>Service Affecting Outage</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Unhappy with Product/Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>