UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Contact_Callback_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Callback_Number__c</fullName>
    <label>Contact Callback Number</label>
    <type>Phone</type>
</CustomField>