UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Contact_e_mail_address__c.field-meta.xml
<CustomField>
    <fullName>Contact_e_mail_address__c</fullName>
    <label>Contact e-mail address</label>
    <type>Email</type>
</CustomField>