UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Contact_Title_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title_Role__c</fullName>
    <description>Created for Todd Bowser for IP Migration case 00745218 02/03/2021</description>
    <label>Contact Title/Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>