UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Contract_Renewals_for_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewals_for_Discussion__c</fullName>
    <description>Created for Sarah Jarvis\Dan McCafferty for Connect Call case page layout (Case 00793739, 2021_08)</description>
    <inlineHelpText>Enter any contract renewals for discussion.  If none, enter None.</inlineHelpText>
    <label>Contract Renewals for Discussion</label>
    <length>8500</length>
    <type>Html</type>
</CustomField>