UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Control_Date__c.field-meta.xml
<CustomField>
    <fullName>Control_Date__c</fullName>
    <label>Control Date</label>
    <type>Date</type>
</CustomField>