UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Correct_Listing__c.field-meta.xml
<CustomField>
    <fullName>Correct_Listing__c</fullName>
    <label>Correct Listing</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>