UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>