UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CPE_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>CPE_Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPE Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFP_Case3</relationshipName>
    <type>Lookup</type>
</CustomField>