UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CPE_Core_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>CPE_Core_Adjustments__c</fullName>
    <label>CPE Core Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>