UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CPE_Customer_DPI__c.field-meta.xml
<CustomField>
    <fullName>CPE_Customer_DPI__c</fullName>
    <description>Added for Jaryl&apos;s UCaaS and CPE tracking - Network COE case.  Created 4/11/2020</description>
    <inlineHelpText>Enter the DPI CPE order number</inlineHelpText>
    <label>CPE Customer DPI #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>