UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CPE_Install__c.field-meta.xml
<CustomField>
    <fullName>CPE_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPE Install</label>
    <type>Checkbox</type>
</CustomField>