UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CPE_Need_Date__c.field-meta.xml
<CustomField>
    <fullName>CPE_Need_Date__c</fullName>
    <description>Created for Jaryl Northrop on UCaas Network COE CPE Tracking case</description>
    <inlineHelpText>Enter date requested for receipt of equipment.</inlineHelpText>
    <label>CPE Need Date’</label>
    <type>Date</type>
</CustomField>