UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CPE_Site_Visit_Order__c.field-meta.xml
<CustomField>
    <fullName>CPE_Site_Visit_Order__c</fullName>
    <description>Created for Jaryl Northrop for UC Network COE CPE case</description>
    <inlineHelpText>Issue DREG order if site visit is requested</inlineHelpText>
    <label>CPE Site Visit Order #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>