UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CPE_Tech_Install_Order__c.field-meta.xml
<CustomField>
    <fullName>CPE_Tech_Install_Order__c</fullName>
    <description>Created for Jaryl for Network COE and CPE UCaaS case</description>
    <label>CPE Tech Install Order #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>