UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CRDD__c.field-meta.xml
<CustomField>
    <fullName>CRDD__c</fullName>
    <label>CRDD</label>
    <type>Date</type>
</CustomField>