UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Creatd_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Creatd_By_Id__c</fullName>
    <formula>CASESAFEID( CreatedById )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creatd By Id</label>
    <type>Text</type>
</CustomField>