UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Create_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Create_Account_Name__c</fullName>
    <label>Account Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>