UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Create_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Create_By_Name__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>