UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/created_by_manager__c.field-meta.xml
<CustomField>
    <fullName>created_by_manager__c</fullName>
    <formula>Owner:User.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>created by: manager</label>
    <type>Text</type>
</CustomField>