UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CRIS_ID__c.field-meta.xml
<CustomField>
    <fullName>CRIS_ID__c</fullName>
    <formula>CreatedBy.CRIS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRIS ID</label>
    <type>Text</type>
</CustomField>