UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CRIS_ID_Manual__c.field-meta.xml
<CustomField>
    <fullName>CRIS_ID_Manual__c</fullName>
    <label>CRIS ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>