UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Criteria_Example__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Example__c</fullName>
    <inlineHelpText>Populates based on the Win Probability Score</inlineHelpText>
    <label>Criteria Example</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>