UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Address__c</fullName>
    <label>Current Address</label>
    <type>TextArea</type>
</CustomField>