UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Current_Escalations__c.field-meta.xml
<CustomField>
    <fullName>Current_Escalations__c</fullName>
    <description>Created for Sarah Jarvis\Dan McCafferty for Connect Call case page layout (Case 00793739, 2021_08)</description>
    <inlineHelpText>Enter any current escalations for discussion.  If none, enter None.</inlineHelpText>
    <label>Current Escalations</label>
    <length>7500</length>
    <type>Html</type>
</CustomField>