UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Current_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Revenue__c</fullName>
    <description>Created for Alicia Robinson for her RFP case</description>
    <inlineHelpText>Enter the current monthly revenue amount.</inlineHelpText>
    <label>Current Monthly Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>