UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Current_Tax_Exempt_BTN__c.field-meta.xml
<CustomField>
    <fullName>Current_Tax_Exempt_BTN__c</fullName>
    <label>Current Tax Exempt BTN</label>
    <type>Phone</type>
</CustomField>