UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Acceptance_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acceptance_Form_Sent__c</fullName>
    <label>Customer Acceptance Form Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>