UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Alt_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Alt_Phone_Number__c</fullName>
    <label>Customer Alt Phone Number</label>
    <type>Phone</type>
</CustomField>