UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Broadband__c.field-meta.xml
<CustomField>
    <fullName>Customer_Broadband__c</fullName>
    <label>Customer Broadband</label>
    <length>50</length>
    <type>Text</type>
</CustomField>