UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Financed_Thru_TAMCO__c.field-meta.xml
<CustomField>
    <fullName>Customer_Financed_Thru_TAMCO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Financed Thru TAMCO</label>
    <type>Checkbox</type>
</CustomField>