UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Notified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the First Bill Review Case for Network COE</description>
    <inlineHelpText>Check if the customer has been notified.</inlineHelpText>
    <label>Customer Notified</label>
    <type>Checkbox</type>
</CustomField>