UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Requested_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Due_Date__c</fullName>
    <label>Customer Requested Due Date</label>
    <type>Date</type>
</CustomField>