UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requester_Email__c</fullName>
    <label>Requester Email</label>
    <type>Email</type>
</CustomField>