UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requester_Name__c</fullName>
    <label>Requester Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>