UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Customer_Requester_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requester_Phone__c</fullName>
    <label>Requester Phone</label>
    <type>Phone</type>
</CustomField>