UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Cutover_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Cutover_Due_Date__c</fullName>
    <label>Cutover Due Date</label>
    <type>DateTime</type>
</CustomField>