UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Data</label>
    <length>20</length>
    <type>Text</type>
</CustomField>