UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Date_added_to_WIP__c.field-meta.xml
<CustomField>
    <fullName>Date_added_to_WIP__c</fullName>
    <label>Date added to WIP</label>
    <type>Date</type>
</CustomField>