UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Date_Billed__c.field-meta.xml
<CustomField>
    <fullName>Date_Billed__c</fullName>
    <label>Date Billed</label>
    <type>Date</type>
</CustomField>