UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Date_of_Initial_Lead_CC_Team_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initial_Lead_CC_Team_Contact__c</fullName>
    <label>Date of Initial Lead/CC Team Contact</label>
    <type>Date</type>
</CustomField>