UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Debit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Debit_Reason__c</fullName>
    <label>Debit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CAP_Request_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Reverse Duplicate Credit</fullName>
            </value>
            <value>
                <fullName>Reverse Credit Error</fullName>
            </value>
            <value>
                <fullName>Bill for Active Products on Account</fullName>
            </value>
            <value>
                <fullName>Bill for Active Services on Account</fullName>
            </value>
            <value>
                <fullName>Bill for Reserved Numbers Being Ported Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>