UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Debit_Type__c.field-meta.xml
<CustomField>
    <fullName>Debit_Type__c</fullName>
    <label>Debit Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CAP_Request_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>MRC - Monthly Recurring Charges</fullName>
            </value>
            <value>
                <fullName>NRC - Non-Recurring Charges</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Bill for Construction Services previously unbilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>