UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <inlineHelpText>What is the evaluation criteria?  What will be required to compel this customer to make a change?</inlineHelpText>
    <label>Decision Criteria</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>