UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Decision_Makers__c.field-meta.xml
<CustomField>
    <fullName>Decision_Makers__c</fullName>
    <label>Decision Makers</label>
    <length>20</length>
    <type>Text</type>
</CustomField>