UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Created for Alicia Robinson for the RFP case on case 00734901</description>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>