UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Description_of_Offer__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Offer__c</fullName>
    <description>Created for Skip Lineberg for Churn Alert case 11/2020</description>
    <label>Description of Offer</label>
    <type>TextArea</type>
</CustomField>