UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Description_Order_Entry_Errors__c.field-meta.xml
<CustomField>
    <fullName>Description_Order_Entry_Errors__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>