UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Designer_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Designer_Engineer__c</fullName>
    <label>Designer/Engineer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>