UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Desired_Salesforce_Request__c.field-meta.xml
<CustomField>
    <fullName>Desired_Salesforce_Request__c</fullName>
    <label>Desired Salesforce Request</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Upload</fullName>
            </value>
            <value>
                <fullName>Error Message</fullName>
            </value>
            <value>
                <fullName>New Field Request</fullName>
            </value>
            <value>
                <fullName>New Functionality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>