UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Details_gathered_about_current_system__c.field-meta.xml
<CustomField>
    <fullName>Details_gathered_about_current_system__c</fullName>
    <label>Details gathered about current system</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>