UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Dev_Defect_Category__c.field-meta.xml
<CustomField>
    <fullName>Dev_Defect_Category__c</fullName>
    <label>Dev Defect Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vlocity OM</fullName>
            </value>
            <value>
                <fullName>Vlocity M6 OM</fullName>
            </value>
            <value>
                <fullName>DPI Manage Agreement</fullName>
            </value>
            <value>
                <fullName>Telephone Number Format</fullName>
            </value>
            <value>
                <fullName>Address Format Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>