UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/DGF_Call_Attendees__c.field-meta.xml
<CustomField>
    <fullName>DGF_Call_Attendees__c</fullName>
    <label>DGF Call Attendees</label>
    <type>TextArea</type>
</CustomField>