UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/DGF_Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>DGF_Call_Duration__c</fullName>
    <inlineHelpText>Enter hours as number and minutes as decimal.
(EX. 2 Hours 30 Minutes = 2.5)</inlineHelpText>
    <label>DGF Call Duration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>