UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/DGF_Complete__c.field-meta.xml
<CustomField>
    <fullName>DGF_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DGF Complete</label>
    <type>Checkbox</type>
</CustomField>