UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/DGF_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>DGF_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Lorraine Joiner&apos;s Porting Case 4/2/2020</description>
    <inlineHelpText>Check after the DGF review is completed.</inlineHelpText>
    <label>DGF Review Complete</label>
    <type>Checkbox</type>
</CustomField>