UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/DIDBCN_Task_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>DIDBCN_Task_Completion_Date__c</fullName>
    <description>This field was created for use on the Circuit case for Jaryl .</description>
    <label>DIDBCN Task Completion Date</label>
    <type>Date</type>
</CustomField>