UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Directory__c.field-meta.xml
<CustomField>
    <fullName>Directory__c</fullName>
    <label>Directory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>