UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Directory_Affected__c.field-meta.xml
<CustomField>
    <fullName>Directory_Affected__c</fullName>
    <label>Directory Affected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>