UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Directory_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Directory_Request_Type__c</fullName>
    <label>Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Listing Error</fullName>
            </value>
            <value>
                <fullName>Assistance Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>